<resources>
    <string name="app_name">My Portfolio App</string>
    <string name="action_settings">Settings</string>
    <string name="myapps_text">My Nanodegree Apps!</string>
    <string name="app1_name">SPOTIFY STREAMER</string>
    <string name="app2_name">SCORES APP</string>
    <string name="app3_name">LIBRARY APP</string>
    <string name="app4_name">BUILD IT BIGGER</string>
    <string name="app5_name">XYZ READER</string>
    <string name="app6_name">CAPSTONE:MY OWN APP</string>
</resources>
