<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/dash_background">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
        android:id="@+id/layout"
        android:longClickable="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myapps_text_view"
            android:text="@string/myapps_text"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textColor="@color/dash_text_color"
            android:layout_marginTop="10dp" />

        <Button
            style="@style/myAppButtonStyle"
            android:text="@string/app1_name"
            android:id="@+id/btn_spotify"
            android:layout_below="@+id/myapps_text_view"
            android:layout_marginTop="20dp" />

        <Button
            style="@style/myAppButtonStyle"
            android:text="@string/app2_name"
            android:id="@+id/btn_scores"
            android:layout_below="@+id/btn_spotify" />
        <Button
            style="@style/myAppButtonStyle"
            android:text="@string/app3_name"
            android:id="@+id/btn_library"
            android:layout_below="@+id/btn_scores" />
        <Button
            style="@style/myAppButtonStyle"
            android:text="@string/app4_name"
            android:id="@+id/btn_builditbigger"
            android:layout_below="@+id/btn_library"/>
        <Button
            style="@style/myAppButtonStyle"
            android:text="@string/app5_name"
            android:id="@+id/btn_xyzreader"
            android:layout_below="@+id/btn_builditbigger" />
        <Button
            style="@style/myAppButtonStyle"
            android:text="@string/app6_name"
            android:id="@+id/btn_capstone"
            android:layout_below="@+id/btn_xyzreader"
            android:textColor="@color/white"
            android:background="@color/capstone_btn_color"/>

    </RelativeLayout>
</ScrollView>